# mcp-rlm

./: .gitignore  README.md  pyproject.toml  research.md
docs/plans/: 2026-02-13-rlm-mcp-codex-companion-design.md  2026-02-13-rlm-mcp-codex-companion-test-matrix.md  2026-02-13-rlm-mcp-codex-companion.md
src/rlm_mcp/: errors.py  guardrails.py  models.py  sandbox.py  server.py  service.py  session_store.py  trace.py
tests/: test_smoke_import.py
tests/docs/: test_readme_sections.py
tests/integration/: test_guardrail_stops.py  test_mcp_tool_flow.py
tests/unit/: test_guardrails.py  test_models_and_errors.py  test_sandbox.py  test_server_build_app.py  test_server_response_format.py  test_service_finalize_trace.py  test_service_init_get_var.py  test_service_run_repl.py  test_session_store.py  test_trace.py
