[project]
name = "rlm-mcp"
version = "0.1.0"
description = "RLM MCP Codex Companion MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.1.0",
  "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
